@@ -8,6 +8,7 @@
   * Change the Lite runtime to prefer merging from the wireformat into mutable
     messages rather than building up a new immutable object before merging. This
     way results in fewer allocations and copy operations.
+  * Make message-type extensions merge from wire-format instead of building up instances and merging afterwards. This has much better performance.
 
 
 2022-09-13 version 3.16.2 (C++/Java/Python/PHP/Objective-C/C#/Ruby)
